<resources>
    <string name="app_name">Android Fome Zero</string>
    <string name="no_account_yet">Ainda não tem conta?</string>
    <string name="sign_up">Cadastre-se</string>
    <string name="create_account">Criar conta</string>
    <string name="recover_password">Recuperar senha</string>
    <string name="enter">Entrar</string>
    <string name="want_register_ong">Deseja registrar uma ONG?</string>
    <string name="remember_my_password">Lembrar minha senha</string>
    <string name="forgot_password">Esqueceu a senha?</string>
    <string name="password">Senha</string>
    <string name="email">E-mail</string>
    <string name="go_to_website">Vá para o site</string>
    <string name="go_website">Ir para site</string>

    <string name="name">Nome</string>
    <string name="info_about_registration">Informação sobre cadastro</string>
    <string name="i_am_producer">Sou produtor</string>
    <string name="i_am_consumer">Sou consumidor</string>
    <string name="rules_password_text">A senha deve conter pelo menos 6 caracteres, incluindo letras e números.</string>
    <string name="agree_privacy_policy_and_use_terms">Concordo com a Política de Privacidade e Termos de Uso</string>
    <string name="accept_use_terms">Necessario aceitar os termos de uso</string>

    <string name="jump">Pular</string>
    <string name="next">Proximo</string>
    <string name="finish_registration">Finalizar cadastro</string>
    <string name="hello_user">Olá, %1$s!</string>
    <string name="hello">Olá</string>
    <string name="help_fight_hunger">Ajude no combate a fome</string>
    <string name="information_text">Veja abaixo as instituições e projetos cadastrados na \nnossa rede e ajude-nos a atingir a meta do mês \ndoando suas moedas que serão convertidas em \nalimentos.</string>
    <string name="make_your_signature">Faça sua \nassinatura</string>
    <string name="fresh_products">Produtos fresquinhos de\n produtores locais toda\nsemana na sua mesa</string>
    <string name="ong_food_on_table">ONG Comida na mesa</string>
    <string name="ong_child_without_hunger">ONG criança sem fome</string>
    <string name="account_created">Cadastro realizado!</string>

    <string name="home">Início</string>
    <string name="my_basket">Minha cesta</string>
    <string name="donation">Doações</string>
    <string name="profile">Perfil</string>

    <string name="coin_balance">Saldo de moedas Horticoins\n gerados da sua cesta</string>
    <string name="total_coin">10</string>
    <string name="help_against_hunger">Ajude no combate a fome</string>
    <string name="donation_information">Veja abaixo as instituições e projetos cadastrados na\n nossa rede e ajude-nos a atingir a meta do mês\n doando suas Horticoins que serão convertidas\n em alimentos.</string>
    <string name="website_information">Para saber mais sobre os projetos e instituições que \nestamos ajudando, acesse o nosso site.</string>
    <string name="usertype_not_selected">Usuario não selecionado</string>

    <string name="delivery">Entrega</string>
    <string name="delivery_information">Escolha se você prefere retirar sua cesta em um dos nossos pontos de coleta, ou receber em casa pagando uma taxa a mais</string>
    <string name="collect_point">Retirar no ponto de coleta - R$00,00</string>
    <string name="delivery_match_the_producer">Entrega (à combinar com produtor)</string>
    <string name="subtotal">Subtotal</string>
    <string name="payment">Pagamento</string>
    <string name="pix_payment_information">Realize o pagamento para a chave pix informada abaixo e em seguida anexe o comprovante de pagamento.</string>
    <string name="attach_document">Anexar comprovante</string>
    <string name="complete_purchase">Concluir compra</string>

    <string name="more_text">+</string>
    <string name="less_text">-</string>
    <string name="cancel_text">Cancelar</string>
    <string name="confirm_text">Confirmar</string>

    <string name="chosen_basket_information">Você escolheu a cesta de tamanho médio (12 itens), selecione quantas porções de cada categoria deseja receber.</string>
    <string name="important">Importante!</string>
    <string name="donation_message">Cada unidade de alimento retirada da sua cesta, é convertida em Horticoins, nossa moeda virtual que é utilizada por instituições parceiras para adquirir alimentos e ajudar no combate a fome!</string>
    <string name="spices">Temperos</string>
    <string name="vegetable">Legumes</string>
    <string name="greens">Verduras</string>
    <string name="fruits">Frutas</string>
    <string name="processed_foods">Processados</string>
    <string name="see_examples">Ver exemplos</string>
    <string name="signature">Assinatura</string>
    <string name="signature_plan_title">Vamos configurar seu plano?</string>
    <string name="signature_plan_subtitle">Escolha qual a frequência de recebimento ou retirada da sua cesta:</string>
    <string name="weekly">Semanal</string>
    <string name="biweekly">Quinzenal</string>
    <string name="signature_basket_size">Escolha qual o tamanho deseja para sua cesta de alimentos:</string>
    <string name="signature_plan_value_information">Obs: O valor informado acima é cobrado de acordo com a frequência escolhida.</string>

    <string name="my_baskets">Minhas cestas</string>
    <string name="choose_basket">Escolha abaixo qual o tamanho da cesta você deseja fornecer, e veja quantos e quais os tipos de alimentos em cada uma.</string>
    <string name="small_basket">Pequena \n1 tempero, 2 legumes, 2 verduras e 2 frutas</string>
    <string name="medium_basket">Média \n2 temperos, 3 legumes, 3 verduras e 3 frutas</string>
    <string name="big_basket">Grande \n3 temperos, 4 legumes, 4 verduras e 4 frutas</string>
    <string name="confirm_selection">Confirmar seleção</string>
    <string name="finances">Financeiro</string>
    <string name="available_balance">Saldo disponível</string>
    <string name="balance">R$ 00,00</string>
    <string name="configure_pix">Configurar PIX</string>
    <string name="see_extract">Ver extrato</string>
    <string name="cadastred_keys">Chaves cadastradas</string>
    <string name="phone_number">(31) 99999–9999</string>
    <string name="pix_keys">Chaves pix</string>
    <string name="pix_key_type">Informe qual tipo de chave pix deseja cadastrar para receber suas vendas:</string>
    <string name="cpf">CPF</string>
    <string name="phone">Telefone</string>
    <string name="aleatory_key">Chave aleatória</string>
    <string name="registre_new_pix_key">Informe no campo abaixo a chave pix a ser \nregistrada:</string>
    <string name="inform_key">Informe a chave pix</string>
    <string name="registre_key">Registrar chave</string>
    <string name="leave_account">Sair da conta</string>
    <string name="my_data">Meus dados</string>
    <string name="user_name">José</string>
    <string name="my_finances">Minhas finanças</string>
    <string name="configure_basket_type">Configure quais os tipos e tamanhos de cesta de alimentos \nvocê deseja fornecer.</string>
    <string name="see_my_income">Ver meus rendimentos</string>
    <string name="cadastre_your_pix_key">Cadastrar chave Pix</string>
    <string name="start">Início</string>
    <string name="something_is_wrong">Algo deu errado!</string>
    <string name="ong_againt_hungry">Se você é uma instituição que atua no combate a fome e deseja solicitar seu cadastro, visite nosso site e saiba mais.</string>
    <string name="onboarding_subtitle">Alimentação é direito básico e a sua partilha é fundamental à quem tem fome. Através da assinatura mensal, você garante alimentação saudável democratizada pra sua família e ainda possibilita o mesmo consumo pra uma família em vulnerabilidade.</string>
    <string name="onboarding_home_title">Tire a fome do caminho</string>
    <string name="contact_producer">Contactar produtor</string>
    <string name="setup_plan">Configurar plano</string>

</resources>