<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/home_consumer"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home" />

    <item
        android:id="@+id/my_basket_consumer"
        android:enabled="true"
        android:icon="@drawable/ic_piggy_bank"
        android:title="@string/my_basket"/>

<!--    <item-->
<!--        android:id="@+id/donations_consumer"-->
<!--        android:enabled="true"-->
<!--        android:icon="@drawable/ic_money"-->
<!--        android:title="@string/donation"/>-->

    <item
        android:id="@+id/profile_consumer"
        android:enabled="true"
        android:icon="@drawable/ic_user"
        android:title="@string/profile"/>
</menu>