<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.producer.payment.presentation.PaymentFragment">

    <include
        android:id="@+id/paymentToolbar"
        layout="@layout/toolbar" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtDescriptionPix"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/pix_key_type"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/paymentToolbar"
        app:layout_constraintTop_toBottomOf="@id/paymentToolbar" />

    <RadioGroup
        android:id="@+id/radioGroupPayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@id/txtDescriptionPix"
        app:layout_constraintTop_toBottomOf="@id/txtDescriptionPix">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbtnCpf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:buttonTint="@color/neutral_black"
            android:paddingHorizontal="16dp"
            android:text="@string/cpf"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@id/txtDescriptionPix"
            app:layout_constraintTop_toBottomOf="@id/txtDescriptionPix" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbtnCellphone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/neutral_black"
            android:paddingHorizontal="16dp"
            android:text="@string/phone"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@id/rbtnCpf"
            app:layout_constraintTop_toBottomOf="@id/view2" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbtnEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/neutral_black"
            android:paddingHorizontal="16dp"
            android:text="@string/email"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@id/rbtnCpf"
            app:layout_constraintTop_toBottomOf="@id/rbtnCellphone" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbtnAleatoryKey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/neutral_black"
            android:paddingHorizontal="16dp"
            android:text="@string/aleatory_key"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@id/rbtnCpf"
            app:layout_constraintTop_toBottomOf="@id/rbtnEmail" />
    </RadioGroup>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtNewPix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/registre_new_pix_key"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/txtDescriptionPix"
        app:layout_constraintTop_toBottomOf="@id/radioGroupPayment" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTxtInformPix"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_opacity_green"
        android:gravity="center_vertical"
        android:hint="@string/inform_key"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="16dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/neutral_black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtNewPix" />

    <View
        android:id="@+id/viewEditTxt"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/neutral_black"
        app:layout_constraintBottom_toBottomOf="@id/editTxtInformPix"
        app:layout_constraintEnd_toEndOf="@id/editTxtInformPix"
        app:layout_constraintStart_toStartOf="@id/editTxtInformPix" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegisterKey"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/bg_dark_green_small_radius"
        android:gravity="center"
        android:text="@string/registre_key"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewEditTxt" />

</androidx.constraintlayout.widget.ConstraintLayout>