<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".feature.producer.finances.presentation.FinancesFragment">

    <include
        android:id="@+id/financesToolbar"
        layout="@layout/toolbar" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgPiggyBank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:src="@drawable/piggy_bank"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtBalanceAvailable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/available_balance"
        android:textColor="@color/black"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgPiggyBank" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtMoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/balance"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtBalanceAvailable" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnConfigurePix"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_opacity_green"
        android:drawableEnd="@drawable/ic_foward_arrow"
        android:gravity="center_vertical"
        android:paddingHorizontal="16dp"
        android:paddingVertical="16dp"
        android:text="@string/configure_pix"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtMoney" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnExtract"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_opacity_green"
        android:drawableEnd="@drawable/ic_foward_arrow"
        android:gravity="center_vertical"
        android:paddingHorizontal="16dp"
        android:paddingVertical="16dp"
        android:text="@string/see_extract"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnConfigurePix" />

    <View
        android:id="@+id/viewSeparator"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="24dp"
        android:background="@color/neutral_black"
        app:layout_constraintEnd_toEndOf="@id/btnExtract"
        app:layout_constraintStart_toStartOf="@id/btnExtract"
        app:layout_constraintTop_toBottomOf="@id/btnExtract" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtCadastredKeys"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/cadastred_keys"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/viewSeparator"
        app:layout_constraintTop_toBottomOf="@id/viewSeparator" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="64dp"
        android:drawableStart="@drawable/ic_check_phone"
        android:drawablePadding="8dp"
        android:text="@string/phone_number"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/txtCadastredKeys"
        app:layout_constraintTop_toBottomOf="@id/txtCadastredKeys" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/ic_trash_can"
        app:layout_constraintEnd_toEndOf="@id/viewSeparator"
        app:layout_constraintStart_toEndOf="@id/txtPhoneNumber"
        app:layout_constraintTop_toBottomOf="@id/txtCadastredKeys" />

</androidx.constraintlayout.widget.ConstraintLayout>
