<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".feature.producer.basket.presentation.BasketFragment">

    <include
        android:id="@+id/basketToolbar"
        layout="@layout/toolbar" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtDescriptionMyBaskets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/choose_basket"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:drawableTint="@color/black"
        app:layout_constraintStart_toStartOf="@id/basketToolbar"
        app:layout_constraintTop_toBottomOf="@id/basketToolbar" />

    <View
        android:id="@+id/viewSmallBasket"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_green_stroke"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtDescriptionMyBaskets" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkboxSmallBasket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:buttonTint="@color/neutral_black"
        android:padding="8dp"
        android:text="@string/small_basket"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/viewSmallBasket"
        app:layout_constraintTop_toTopOf="@id/viewSmallBasket" />

    <View
        android:id="@+id/viewMediumBasket"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_green_stroke"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewSmallBasket" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkboxMediumBasket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:buttonTint="@color/neutral_black"
        android:padding="8dp"
        android:text="@string/medium_basket"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/viewMediumBasket"
        app:layout_constraintTop_toTopOf="@id/viewMediumBasket" />

    <View
        android:id="@+id/viewBigBasket"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_green_stroke"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewMediumBasket" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkboxBigBasket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:buttonTint="@color/neutral_black"
        android:padding="8dp"
        android:text="@string/big_basket"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/viewBigBasket"
        app:layout_constraintTop_toTopOf="@id/viewBigBasket" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnConfirmSelection"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/bg_dark_green_small_radius"
        android:gravity="center"
        android:text="@string/confirm_selection"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewBigBasket" />

</androidx.constraintlayout.widget.ConstraintLayout>